<resources>

    <!-- Genéricos -->
    <string name="app_name">Mis pelis favoritas</string>

    <!-- MainActivity -->
    <string name="titulo">Título</string>
    <string name="tituloHint">Título de la película</string>
    <string name="argumento">Argumento</string>
    <string name="argumentoHint">Sinapsis de la película</string>
    <string name="categoria">Categoría</string>
    <string name="duracionHint">Duración</string>
    <string name="fechaHint">Fecha de la película</string>
    <string name="guardar">GUARDAR</string>

    <string name="msg_titulo_vacio">Título vacío</string>
    <string name="msg_argumento_vacio">Argumento vacío</string>
    <string name="msg_duracion_vacio">Duración vacío</string>
    <string name="msg_fecha_vacio">Fecha vacía</string>
    <string name="msg_guardado">Se ha guardado la película</string>

    <!-- CategoriaActivity -->
    <string name="creacionCategoria">Creación de nueva categoría</string>
    <string name="nombreCategoria">Nombre de la Categoría</string>
    <string name="descripcionCategoria">Descripción de la Categoría</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>

    <string name="msg_crear_nueva_categoria">Crear nueva categoría</string>
    <string name="msg_modif_categoria">Modificar categoría</string>
    <string name="msg_accion_cancelada">Acción cancelada</string>
    <string name="msg_accion_ok">Acción no cancelada</string>

    <!-- ShowMovieActivity -->
    <string name="title_activity_show_movie">ShowMovieActivity</string>
    <string name="action_settings">Settings</string>
    <string name="desc_imagen_fondo">Imagen de fondo pelicula</string>
    <string name="subject_compartir">Se compartirá la siguiente película</string>
    <string name="error_conexion">Error de conexión</string>
    <string name="compartir">CompartirPelicula</string>
    <string name="title_Info">INFORMACIÓN</string>
    <string name="title_Actores">ACTORES</string>
    <string name="title_Argumento">ARGUMENTO</string>

    <!-- ContentScrolling -->
    <string name="tenet_titulo">Tenet</string>
    <string name="tenet_argumento">Una acción épica que gira en torno al espionaje internacional, los viajes en el tiempo y la evolución, en la que un agente secreto debe prevenir la Tercera Guerra Mundial.</string>
    <string name="tenet_duracion">2h 30m</string>
    <string name="tenet_estreno">26/08/2020</string>
    <string name="tenet_categoria">Acción</string>
    <string name="desc_caratula">Descripción caratula</string>
    <string name="duracion">Duración</string>
    <string name="contenido">Contenido</string>
    <string name="estreno">Estreno</string>

    <!-- InfoFragment -->
    <string name="estrenoFecha">Fecha de estreno</string>



    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Filtro por categoría</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>