<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InfoFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/caratulaPelicula"
            android:layout_width="175dp"
            android:layout_height="242dp"
            android:src="@drawable/tenet_principal" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estrenoFecha"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/estrenoPelicula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenet_estreno"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duracion"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/duracionPelicula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenet_duracion"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>